<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 The OmniROM Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.	See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.	If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="weather_settings"
    android:title="@string/service_settings_title">

    <SwitchPreference
        android:defaultValue="false"
        android:key="enable"
        android:title="@string/enable_title" />

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/update_interval_entries"
        android:entryValues="@array/update_interval_values"
        android:key="update_interval"
        android:title="@string/update_interval_title" />

    <Preference
        android:key="update_status"
        android:title="@string/last_update_time"
        android:persistent="false" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/provider_entries"
        android:entryValues="@array/provider_values"
        android:key="provider"
        android:title="@string/provider_title" />

    <EditTextPreference
        android:key="owm_api_key"
        android:title="@string/owm_api_key_title"
        android:summary="@string/owm_api_key_unset"
        android:inputType="textNoSuggestions|textPassword"
        android:persistent="true" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/units_entries"
        android:entryValues="@array/units_values"
        android:key="units"
        android:title="@string/units_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="custom_location"
        android:title="@string/custom_location_title" />

    <org.omnirom.omnijaws.CustomLocationPreference
        android:dependency="custom_location"
        android:dialogTitle="@string/weather_custom_location_dialog_title"
        android:key="weather_custom_location_city"
        android:title="@string/weather_custom_location_title" />

    <ListPreference
        android:key="weather_icon_pack"
        android:title="@string/weather_icon_pack_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="background_location"
        android:persistent="false"
        android:title="@string/background_location_title"
        android:summary="@string/background_location_summary" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="lockscreen_weather_enabled"
        android:title="@string/lockscreen_weather_title"
        android:summary="@string/lockscreen_weather_summary" />

    <ListPreference
        android:defaultValue="compact"
        android:entries="@array/lockscreen_weather_style_entries"
        android:entryValues="@array/lockscreen_weather_style_values"
        android:key="lockscreen_weather_style"
        android:title="@string/lockscreen_weather_style_title" />

</PreferenceScreen>
